src/test/ui/parser/removed-syntax-record.rs
// compile-flags: -Z parse-only

type t = { f: () }; //~ ERROR expected type, found `{`
